[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dshelpers"
version = "2.0.0"
description = "Provides some helper functions previously used by The Sensible Code Company's Data Services team."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Cantabular Ltd", email = "dataservices@sensiblecode.io" }]
dependencies = [
  "requests>=2.31.0",
  "requests-cache>=1.3.0",
  "scraperwiki>=1.0.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/cantabular/data-services-helpers"

[tool.setuptools]
py-modules = ["dshelpers"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["A", "I", "UP", "W"]
